# neto-fifth

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
